# rpi0-weather

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PI_SETUP.md  README.md  app.py  app_emulate.py  build.sh  custom_config.json  font_converter  hardware_test_config.json  local_configuration.json  rpi0-weather.service  run.sh  setup.sh  test_nws_api  test_nws_api.py  todo.md  weather.service  xmake.lua
fonts/: inter24.h  inter32.h  inter48.h
legacy/: app_emulate.py  setup.sh  weather.service
legacy/src/: asset_db.h  convert_font.cpp  convert_images.cpp  emulate.cpp  inky_mock.h  log.h
legacy/src/python/: assets.db  configuration.json  forcast_nws.py  weather_app.py
legacy/src/utils/: palette.h
source_assets/: settings.json
src/: asset_db.cpp  asset_db.h  bitmap_font.cpp  bitmap_font.h  config.cpp  config.h  convert_font.cpp  convert_font.h  convert_images.cpp  convert_images.h  display_renderer.cpp  display_renderer.h  emulate.cpp  emulate.h  font_renderer.cpp  font_renderer.h  inky_mock.cpp  logger.cpp  logger.h  main.cpp  nws_client.cpp  nws_client.h  sdl_emulator.cpp  sdl_emulator.h  test_nws_api.cpp  weather_app.cpp  weather_app.h  weather_data.cpp  weather_data.h  weather_icons.h  weather_service.cpp  weather_service.h
src/python/: assets.db  configuration.json  forcast.py  forcast_nws.py  weather.py  weather_app.py
src/utils/: collector.h  zipfile.cpp  zipfile.h
tools/: font_converter.cpp  image_converter.cpp
